Corrected features-item-description alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -845,6 +845,10 @@ DESKTOP STYLES===========================================================*/
   flex-basis:33%;
 }
 
+.features-item-description{
+  padding: 0 70px;
+}
+
 .reviews article div{
   width: 42%;
 }
@@ -858,6 +862,7 @@ DESKTOP STYLES===========================================================*/
   line-height: 1.5;
   margin-top: 10px;
 }
+
 /*=============================================================================
 About page
 ==============================================================================*/
